@@ -1,3 +1,9 @@
+Sat May 13 20:24:18 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Hide menu, *then* perform action. Otherwise hitting "reload" on
+	an http:// image over a slow connection keeps the mouse grab until
+	finished. Messy ;-)
+
 Sat May 13 19:54:46 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Make the menus slightly prettier. I wish I had an artistic bone
